--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.7",
@@ -38,6 +39,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "resend": "^4.1.2",
     "server-only": "^0.0.1",
     "sonner": "^2.0.1",
     "superjson": "^2.2.2",
